--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'TX'
 - !lcsh 'Home economics'
 - !lcsh 'Cooking'
+- GITenberg
 title: Living on a Little
 url: http://www.gutenberg.org/ebooks/42803
